# xhec-mlops-2025-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  PR_0.md  README.md  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: ci.yaml
flows/: train_flow.py
notebooks/: eda.ipynb  modelling.ipynb  modelling_without_feature_engineering.ipynb
src/modelling/: create_deployment.py  load_registered_models.py  main.py  predicting.py  prefect_flow.py  prefect_tasks.py  preprocessing.py  run_prefect_flow.py  training.py  utils.py
src/web_service/: __init__.py  main.py  utils.py
src/web_service/lib/: __init__.py  inference.py  models.py
src/web_service/local_objects/: label_encoder.pkl  scaler.pkl
