[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Soumyabrata Bairagi", email = "roy.bensimon@polytechnique.edu" },
  { name = "Samuel Rajzman", email = "samuel.rajzman@hec.edu" },
  { name = "Roy Bensimon", email = "roy.bensimon@hec.edu" },
  { name = "Vassili de Rosen", email = "vassili.-rosen@hec.edu" },
  { name = "Adam Berdah", email = "adam.berdah@hec.edu" },
]
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "ruff>=0.1.0",

    # Machine Learning
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",

    # MLOps
    "prefect>=2.14.0",

    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # Data processing
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Code quality
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",

    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",

    # Development tools
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
