[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "username", email = "user@email.com" },
] # TODO: add authors here
description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">3.10" # TODO: update this version
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "prefect>=2.14.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
exclude = ["assets*", "models*"]

# TODO: add pydantic, pre-commit and ruff as a dependency
